--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "boutique": "^0.1.7",
     "gulp-util": "^3.0.4",
-    "protagonist": "^0.19.3"
+    "object-path": "^0.9.2",
+    "protagonist": "^0.19.3",
+    "through2": "^0.6.5"
   },
   "devDependencies": {
     "lab": "^5.8.0",
